test/error/s_struct_type.lua


local a : struct = nil; -- cannot use 'struct' as a type name
